# AB-experiments

./: .dockerignore  .env.example  .gitignore  README.md  create_db.sql  docker-compose.yml  prediploma_practice_report.md
backend/: CMakeLists.txt  Dockerfile
backend/config/: static_config.yaml
backend/src/: main.cpp
backend/src/components/: config_build_scheduler.cpp  config_build_scheduler.hpp  metric_calculation_scheduler.cpp  metric_calculation_scheduler.hpp
backend/src/handlers/: api_keys_handler.cpp  api_keys_handler.hpp  client_services_handler.cpp  client_services_handler.hpp  config_versions_handler.cpp  config_versions_handler.hpp  experiment_metrics_handler.cpp  experiment_metrics_handler.hpp  experiments_handler.cpp  experiments_handler.hpp  features_handler.cpp  features_handler.hpp  flags_handler.cpp  flags_handler.hpp  health_handler.cpp  health_handler.hpp  login_handler.cpp  login_handler.hpp  metric_results_handler.cpp  metric_results_handler.hpp  metrics_handler.cpp  metrics_handler.hpp  platform_users_handler.cpp  platform_users_handler.hpp  register_service_handler.cpp  register_service_handler.hpp  runtime_events_handler.cpp  runtime_events_handler.hpp  runtime_flags_handler.cpp  runtime_flags_handler.hpp
backend/src/repositories/: client_service_repository.cpp  client_service_repository.hpp
backend/src/services/: assignment_service.cpp  assignment_service.hpp  auth_service.cpp  auth_service.hpp  config_version_service.cpp  config_version_service.hpp  event_service.cpp  event_service.hpp  experiment_service.cpp  experiment_service.hpp  metric_calculation_state.cpp  metric_calculation_state.hpp  metric_service.cpp  metric_service.hpp  session_store.cpp  session_store.hpp
backend/src/utils/: http_utils.cpp  http_utils.hpp  security.cpp  security.hpp
demo-client/: Dockerfile  app.js  index.html  styles.css
demo-client/nginx/: default.conf
frontend/: index.html  package.json
frontend/nginx/: default.conf
frontend/src/: App.jsx  index.css
